@@ -47,6 +47,7 @@ typedef enum
 
     MACHINE_MACBOOKAIR_1,
     MACHINE_MACBOOKAIR_2,
+    MACHINE_MACBOOKAIR_3,
 #else
     MACHINE_POWERBOOK_32,
     MACHINE_POWERBOOK_33,
