@@ -3,6 +3,7 @@ ChangeLog for pommed
 
 version 1.35:
 	- pommed: fix crash if no fnmode sysfs node found.
+	- pommed: add support for the MacBookAir3,1 & 3,2 (October 2010).
 
 version 1.34:
 	- pommed: be more careful when invoking eject (Alioth #312213).
